2012-09-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (file_content_response, request_handler): Free
	MHD_create_response_from_data return.

2012-09-13  Matthew Mundell <matthew.mundell@greenbone.net>

	Adjust for explicit Alert filters in OMP.

	* src/gsad_omp.c (create_alert_omp): Add filter.

	* src/html/omp.xsl (html-create-alert-form): Pass filter as explicit
	request param.
	(alert [trash]): Expect filter in explicit OMP element.  Make restore
	icon depend on whether filter is in trashcan.
	(alert [details]): Expect filter in explicit OMP element.
	(delete_filter_response): New template.
	(filter): Make trashcan icon depend on in_use instead of writable.

2012-09-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (attach_sid): Free tz.

	* src/validator.c (openvas_validator_alias): Remove leaky g_strdup.

2012-09-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-create-alert-form, alert [details]): Make filter
	a field of it's own, instead of a subfield of the mail case.
	(html-alerts-table, alert, alert [trash], html-alerts-trash-table): Add
	a filter column.

2012-09-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_report): Add extra_xml arg.  Update callers.
	(create_filter_omp): If the CREATE_FILTER fails then choose the next
	page according to the "next" param.  Remove done todo.  Pass response
	into get_report for success indicator.

	* src/html/gsad.xsl (html-gsa-logo): Add indicator for creating a filter
	in a report.

	* src/html/omp.xsl (get_report): Apply create_filter_response for error
	dialog.

2012-09-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/gsad.xsl (html-gsa-logo): Use right path for MODIFY_TARGET
	response indicator.  Add indicator for details page.

2012-09-10  Matthew Mundell <matthew.mundell@greenbone.net>

	Add report filtering to email alerts.

	* src/gsad_omp.c (create_alert_omp, delete_alert_omp, get_alerts_omp)